@@ -305,16 +305,16 @@ A simpler interface for setting the size hints than
 Allows specification of minimum and maximum window sizes, and window size increments.
 If a pair of values is not set (or set to -1), the default values will be used.
 
-\docparam{incW}{Specifies the increment for sizing the width (Motif/Xt only).}
+\docparam{incW}{Specifies the increment for sizing the width (GTK/Motif/Xt only).}
 
-\docparam{incH}{Specifies the increment for sizing the height (Motif/Xt only).}
+\docparam{incH}{Specifies the increment for sizing the height (GTK/Motif/Xt only).}
 
-\docparam{incSize}{Increment size (Motif/Xt only).}
+\docparam{incSize}{Increment size (GTK/Motif/Xt only).}
 
 \wxheading{Remarks}
 
 If this function is called, the user will not be able to size the window outside
-the given bounds. The resizing increments are only significant under Motif or Xt.
+the given bounds. The resizing increments are only significant under GTK, Motif or Xt.
 
 
 \membersection{wxTopLevelWindow::SetRightMenu}\label{wxtoplevelwindowsetrightmenu}
